--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,22 +11,28 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.11",
-    "@angular/common": "~11.2.11",
-    "@angular/compiler": "~11.2.11",
-    "@angular/core": "~11.2.11",
-    "@angular/forms": "~11.2.11",
-    "@angular/platform-browser": "~11.2.11",
-    "@angular/platform-browser-dynamic": "~11.2.11",
-    "@angular/router": "~11.2.11",
+    "@angular/animations": "^8.1.3",
+    "@angular/common": "^8.1.3",
+    "@angular/compiler": "~8.1.1",
+    "@angular/compiler-cli": "~8.1.1",
+    "@angular/core": "~8.1.1",
+    "@angular/fire": "^6.1.4",
+    "@angular/forms": "~8.1.1",
+    "@angular/platform-browser": "~8.1.1",
+    "@angular/platform-browser-dynamic": "~8.1.1",
+    "@angular/router": "~8.1.1",
+    "angularfire2": "^5.4.2",
+    "express": "^4.17.1",
+    "firebase": "^8.5.0",
+    "ionic-select-searchable": "^1.0.8",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.10",
-    "@angular/cli": "~11.2.10",
-    "@angular/compiler-cli": "~11.2.11",
+    "@angular-devkit/build-angular": "^0.803.29",
+    "@angular/cli": "^8.1.3",
+    "@angular/compiler-cli": "~8.1.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -40,6 +46,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "typescript": "3.4.5"
   }
 }
