--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,11 +11,12 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
-    "module": "es2020",
+    "module": "amd",
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+      "skipLibCheck": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false
